--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,3 +32,30 @@ h1{
   line-height: 1.2;
   font-size: 18px;
 }
+
+.social{
+  width: 85%;
+  margin: 0 auto;
+}
+
+.social ul{
+  width: 100%;
+  height: 50px;
+  list-style-type: none;
+  display: inline;
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+}
+
+.social ul li{
+  display: inline;
+  text-align: center;
+  width: 25%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.social ul li img{
+  width: 50px;
+  height: 50px;
+}
