--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,6 +38,15 @@ h1{
   margin: 0 auto;
 }
 
+@media (max-width:767px){
+  .bio{
+    width: 85%;
+  }
+  .social{
+    width: 90%;
+  }
+}
+
 .social ul{
   width: 100%;
   height: 50px;
